# d3f1raff

./: .gitignore  .pre-commit-config.yaml  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  setup.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: codecov.yml  docker-build-push.yml  pre-commit.yml  pytest.yml  release-drafter.yml
_clickhouse/: docker-entrypoint-initdb.sql
_modules/postgres/: docker-entrypoint-initdb.sql
app/: __main__.py  settings.py  streaming.py  utils.py
app/adapters/clients/logger/: handler.py
app/adapters/connections/kafka/: consumer.py  producer.py
app/adapters/connections/providers/: http.py
app/containers/: application.py
app/containers/kafka/: container.py
app/containers/quickswap_v3/: container.py
app/services/quickswap_v3/: service.py
app/views/: abstract.py
app/views/quickswap_v3/: view.py
d3f1nance/aave/: IncentivesController.py  PoolV3.py
d3f1nance/convex/: ConvexToken.py
d3f1nance/curve/: Pool.py
d3f1nance/equalizer/: Pair.py  PairFactory.py
d3f1nance/kyberswap/: Pool.py
d3f1nance/pancakeswap/: MasterChefV2.py  PancakePair.py
d3f1nance/quickswap/: AlgebraPool.py
d3f1nance/spookyswap/: SpookySwapV2Pair.py
d3f1nance/uniswap/: UniswapV2Pair.py  UniswapV3Pool.py
d3f1nance/velodrome/: Pair.py  PairFactory.py
d3f1raff/aave/: LendingPool.py
d3f1raff/convex/: BaseRewardPool.py  VirtualBalanceRewardPool.py
d3f1raff/pancakeswap/: PancakePair.py
fastapi/: Dockerfile  requirements.txt
fastapi/app/: __main__.py  settings.py
fastapi/app/orm/: __init__.py  settings.py
fastapi/app/repositories/: abstract.py
fastapi/app/repositories/dish/: repo.py
fastapi/app/repositories/menu/: repo.py
fastapi/app/repositories/submenu/: repo.py
images/clickhouse/: Dockerfile
quickview-streaming/: Dockerfile  pyproject.toml
quickview-streaming/app/: __main__.py  observer.py  settings.py  streaming.py  utils.py
quickview-streaming/app/services/: abstract.py
quickview-streaming/scripts/: mv.sh
quickview-streaming/tests/unit/: conftest.py
streaming-service-etherscan.io-0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640/: Dockerfile  pyproject.toml
streaming-service-etherscan.io-0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640/app/: __main__.py  observer.py  settings.py  utils.py
streaming-service-etherscan.io-0x88e6a0c2ddd26feeb64f039a2c41296fcb3f5640/app/services/: abstract.py
tests/aave/: IncentivesController.py  LendingPool.py  PoolV3.py
tests/convex/: BaseRewardPool.py  ConvexToken.py  VirtualBalanceRewardPool.py
tests/curve/: Pool.py
tests/equalizer/: Pair.py
tests/erc20/: ERC20Token.py
tests/pancakeswap/: MasterChefV2.py  PancakePair.py
tests/quickswap/: AlgebraPool.py
tests/spookyswap/: SpookySwapV2.py
tests/uniswap/: UniswapV2Pair.py  UniswapV3Pool.py
tests/unit/: conftest.py
tests/velodrome/: Pair.py
(+30 files in other folders)
