[tool.poetry]
name = "{{cookiecutter.project}}"
version = "0.0.1"
description = "{{cookiecutter.description}}"
authors = ["e183b796621afbf902067460 <606d18446a06fe9738fd@gmail.com>"]

[tool.poetry.dependencies]
python = "~=3.10"
attrs = "~=23.1.0"
python-dotenv = "~=1.0.0"
uvicorn = "~=0.23.1"
fastapi = "~=0.100.1"
pydantic = "~=2.1.1"
pydantic-settings = "~=2.0.2"
python-multipart = "~=0.0.6"
requests = "~=2.31.0"
httpx = "~=0.24.1"
aiokafka = "~=0.8.1"
fastkafka = "~=0.8.0"
loguru = "^0.7.2"
web3 = "^6.11.4"
coverage = "^7.3.4"

[tool.poetry.group.linters.dependencies]
black = "~=23.7.0"
Flake8-pyproject = "~=1.2.3"
isort = "~=5.12.0"
pylint = "~=2.17.5"
flake8-boolean-trap = "~=1.0.1"
flake8-print = "~=5.0.0"
wemake-python-styleguide = "~=0.18.0"
pre-commit = "^3.5.0"
autopep8 = "^2.0.4"
add-trailing-comma = "^3.1.0"
reorder-python-imports = "^3.12.0"
ruff = "^0.1.6"

[tool.poetry.group.typing.dependencies]
mypy = "~=1.5.1"

[tool.poetry.group.test.dependencies]
pytest = "~=7.4.0"
pytest-mock = "~=3.11.1"

[tool.black]
line-length = 120

[tool.ruff]
line-length = 120
preview = true

[tool.ruff.lint]
select = ["A", "B", "C4", "D", "E", "F", "FURB", "ISC", "Q", "T20", "UP"]
ignore = [
    "A003", # Class attribute {name} is shadowing a Python builtin
    "B026", # Star-arg unpacking after a keyword argument is strongly discouraged
    "C416", # Unnecessary `dict` comprehension (rewrite using `dict()`)
    "D100", # Missing docstring in public module
    "D104", # Missing docstring in public package
    "D105", # Missing docstring in magic method
    "D106", # Missing docstring in public nested class
    "D107", # Missing docstring in __init__
    "D202", # No blank lines allowed after function docstring
    "D203", # one-blank-line-before-class
    "D205", # 1 blank line required between summary line and description
    "D213", # Multi-line docstring summary should start at the second line
    "D214", # Section is over-indented
    "D215", # Section underline is over-indented
    "D400", # First line should end with a period
    "D401", # First line of docstring should be in imperative mood
    "D415", # First line should end with a period, question mark, or exclamation
    "D416", # Section name should end with a colon
    "D417", # Missing argument descriptions in the docstring
]

# Allow fix for all enabled rules (when `--fix`) is provided.
fixable = ["ALL"]

# Allow unused variables when underscore-prefixed.
dummy-variable-rgx = "^(_+|(_+[a-zA-Z0-9_]*[a-zA-Z0-9]+?))$"

[tool.isort]
line_length = 120
multi_line_output = 3
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
include_trailing_comma = true

[tool.pytest.ini_options]
markers = [
    "unit: marks unit-tests",
]
